--- a/src/app/pages/relatorio/relatorio.page.html
+++ b/src/app/pages/relatorio/relatorio.page.html
@@ -7,9 +7,9 @@
   </ion-header>
 
 <ion-content>
-  <p>AAAAAh</p>
-  <div class="luta" *ngFor="let movimento of movimentos">
-  <p>{{movimento.ataques}} {{movimento.local}}
-     {{movimento.arena}} {{movimento.ef}} </p>
-  </div>      
+  <div class="luta" >
+  <p>{{lutaDetalhes}} </p>
+  </div>    
+   
 </ion-content>
+ 
