Reajuste dos forms

--- a/src/app/pages/registra-lutadores/registra-lutadores.page.html
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.html
@@ -1,3 +1,4 @@
+
 <ion-header>
   <ion-toolbar>
     <ion-title>registra_lutadores</ion-title>
@@ -35,7 +36,7 @@
             <ion-input
             formControlName="nome2"
             type="text"
-            [class.invalid]="regiOpform.controls['nome'].valid &&
+            [class.invalid]="regiOpform.controls['nome2'].valid &&
             regiOpform.controls['nome2'].touched">
             </ion-input>
           </ion-item>
