Recebe e envia todos os dados

--- a/src/app/pages/registro-op/registro-op.page.html
+++ b/src/app/pages/registro-op/registro-op.page.html
@@ -50,7 +50,7 @@
           <ion-label> Destro</ion-label>
           <input type="radio"
           value="destro"
-          name="punho"
+          name="punho1"
           formControlName="punho1">
           
         </ion-item>
@@ -59,7 +59,7 @@
           <ion-label> Canhoto </ion-label>
           <input type="radio"
           value="canhoto"
-          name="punho"
+          name="punho1"
           formControlName="punho1">
           
         </ion-item>
@@ -73,7 +73,7 @@
             <ion-label> Destro</ion-label>
             <input type="radio"
             value="destro"
-            name="punho"
+            name="punho2"
             formControlName="punho2">
             
           </ion-item>
@@ -82,7 +82,7 @@
             <ion-label> Canhoto </ion-label>
             <input type="radio"
             value="canhoto"
-            name="punho"
+            name="punho2"
             formControlName="punho2">
             
           </ion-item>
