--- a/src/app/pages/minhas-lutas/minhas-lutas.page.html
+++ b/src/app/pages/minhas-lutas/minhas-lutas.page.html
@@ -6,10 +6,10 @@
     </ion-toolbar>
   </ion-header>  
 
-<ion-content padding> 
+<ion-content padding>  
   <div id="lutas">   
     
-    <div class="luta" *ngFor="let op of userProfile?.oponente; let i = index">
+    <div class="luta" *ngFor="let op of userProfile?.lutadores; let i = index">
       
       <ion-card (click)="selecionaLuta(i)">
         <ion-card-header  >
@@ -21,7 +21,7 @@
               <ion-label>Punhos:{{op.punho1}}  X  {{op.punho2}}</ion-label>
             </ion-item>
             <ion-item>
-              <ion-label>Altura:{{op.altura}}</ion-label>
+              <ion-label>Altura:{{op.altura_relativa}}</ion-label>
             </ion-item>
           </ion-list>
       </ion-card>
