--- a/src/app/pages/luta/luta.page.html
+++ b/src/app/pages/luta/luta.page.html
@@ -17,25 +17,25 @@
         <ion-col>
           <div id="lutador1">
             <ion-row>
-              <ion-button class="cabeca" id="area1" (click)="Area(1)"></ion-button>
+              <ion-button class="cabeca" id="localCorpo1" (click)="marcalocalCorpo(1)"></ion-button>
             </ion-row>
             <ion-row>
               <ion-col>
-                <ion-button class="braco esquerdo" id="area2" (click)="Area(2)"></ion-button>
+                <ion-button class="braco esquerdo" id="localCorpo2" (click)="marcalocalCorpo(2)"></ion-button>
               </ion-col>
               <ion-col>
-                <ion-button class="tronco" id="area3" (click)="Area(3)"></ion-button>
+                <ion-button class="tronco" id="localCorpo3" (click)="marcalocalCorpo(3)"></ion-button>
               </ion-col>
               <ion-col>
-                <ion-button class="braco direito" id="area4" (click)="Area(4)"></ion-button>
+                <ion-button class="braco direito" id="localCorpo4" (click)="marcalocalCorpo(4)"></ion-button>
               </ion-col>
             </ion-row>
             <ion-row>
               <ion-col>
-                <ion-button class="perna esquerda" id="area5" (click)="Area(5)"></ion-button>
+                <ion-button class="perna esquerda" id="localCorpo5" (click)="marcalocalCorpo(5)"></ion-button>
               </ion-col>
               <ion-col>
-                <ion-button class="perna direita" id="area6" (click)="Area(6)"></ion-button>
+                <ion-button class="perna direita" id="localCorpo6" (click)="marcalocalCorpo(6)"></ion-button>
               </ion-col>
             </ion-row>
             
@@ -45,25 +45,25 @@
           <div id="lutador2">
             
             <ion-row>
-              <ion-button class="cabeca" id="area7" (click)="Area(7)"></ion-button>
+              <ion-button class="cabeca" id="localCorpo7" (click)="marcalocalCorpo(7)"></ion-button>
             </ion-row>
             <ion-row>
               <ion-col>
-                <ion-button class="braco esquerdo" id="area8" (click)="Area(8)"></ion-button>
+                <ion-button class="braco esquerdo" id="localCorpo8" (click)="marcalocalCorpo(8)"></ion-button>
               </ion-col>
               <ion-col>
-                <ion-button class="tronco" id="area9" (click)="Area(9)"></ion-button>
+                <ion-button class="tronco" id="localCorpo9" (click)="marcalocalCorpo(9)"></ion-button>
               </ion-col>
               <ion-col>
-                <ion-button class="braco direito" id="area10" (click)="Area(10)"></ion-button>
+                <ion-button class="braco direito" id="localCorpo10" (click)="marcalocalCorpo(10)"></ion-button>
               </ion-col>
             </ion-row>
             <ion-row>
               <ion-col>
-                <ion-button class="perna esquerda" id="area11" (click)="Area(11)"></ion-button>
+                <ion-button class="perna esquerda" id="localCorpo11" (click)="marcalocalCorpo(11)"></ion-button>
               </ion-col>
               <ion-col>
-                <ion-button class="perna direita" id="area12" (click)="Area(12)"></ion-button>
+                <ion-button class="perna direita" id="localCorpo12" (click)="marcalocalCorpo(12)"></ion-button>
               </ion-col>
             </ion-row>
             
@@ -76,16 +76,16 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-button class="movimento" id="ataque1" (click)="Ataque(1)">Ataque</ion-button>
+          <ion-button class="movimento" id="ataque1" (click)="marcaAtaque(1)">Ataque</ion-button>
         </ion-col>
         <ion-col>
-            <ion-button class="movimento" id="ataque2" (click)="Ataque(2)">Resposta</ion-button>
+            <ion-button class="movimento" id="ataque2" (click)="marcaAtaque(2)">Resposta</ion-button>
         </ion-col>
         <ion-col>
-            <ion-button class="movimento" id="ataque3" (click)="Ataque(3)">Contra <br>Resposta</ion-button>
+            <ion-button class="movimento" id="ataque3" (click)="marcaAtaque(3)">Contra <br>Resposta</ion-button>
         </ion-col>
         <ion-col>
-            <ion-button class="movimento" id="ataque4" (click)="Ataque(4)">Contra<br> Ataque</ion-button>
+            <ion-button class="movimento" id="ataque4" (click)="marcaAtaque(4)">Contra<br> Ataque</ion-button>
         </ion-col>
       </ion-row>
       <ion-row class="toqueduplo">
@@ -96,10 +96,10 @@
   <div class="Efetividade">
     <ion-row>
       <ion-col>
-        <ion-button   id="ef1" (click)="Efetividade(true)"> Ponto</ion-button>
+        <ion-button   id="ef1" (click)="marcaEfetividade(true)"> Ponto</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button id="ef0" (click)="Efetividade(false)">Falha</ion-button>
+        <ion-button id="ef0" (click)="marcaEfetividade(false)">Falha</ion-button>
       </ion-col>
     </ion-row>
   </div>
@@ -107,19 +107,19 @@
     <ion-grid>
       <ion-row>
         <ion-col size="1" > 
-          <ion-button class="alerta"  id="zona1" (click)="Arena(1)"></ion-button>
+          <ion-button class="alerta"  id="pista1" (click)="marcaPista(1)"></ion-button>
         </ion-col>
         <ion-col size="4" >
-          <ion-button class="normal" id="zona2" (click)="Arena(2)"></ion-button>
+          <ion-button class="normal" id="pista2" (click)="marcaPista(2)"></ion-button>
         </ion-col>
         <ion-col size="2" >
-          <ion-button class="uniao" id="zona3" (click)="Arena(3)"></ion-button>
+          <ion-button class="uniao" id="pista3" (click)="marcaPista(3)"></ion-button>
         </ion-col>
         <ion-col size="4" >
-          <ion-button class="normal" id="zona4" (click)="Arena(4)"></ion-button>
+          <ion-button class="normal" id="pista4" (click)="marcaPista(4)"></ion-button>
         </ion-col>
         <ion-col  size="1">
-          <ion-button class="alerta" id="zona5" (click)="Arena(5)"></ion-button>
+          <ion-button class="alerta" id="pista5" (click)="marcaPista(5)"></ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
