--- a/src/app/pages/registra-lutadores/registra-lutadores.page.html
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.html
@@ -1,7 +1,9 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>registra_lutadores</ion-title>
+    <ion-button shape="round" (click)="voltar()">
+      <ion-icon name="arrow-dropleft-circle"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
  
