--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -1,9 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-button shape="round" (click)="voltar()">
-      <ion-icon name="arrow-dropleft-circle"></ion-icon>
-    </ion-button> 
-    <ion-title>Registro</ion-title>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-button shape="round" (click)="voltar()">
+            <ion-icon name="arrow-dropleft-circle"></ion-icon>
+          </ion-button>
+        </ion-col> 
+        <ion-col>
+          <ion-title>Registro</ion-title>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
   
