--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,10 @@
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              
+          <ion-menu-toggle auto-hide="false" >
+            <ion-item (click)="editaPerfil()">
               <ion-label>
-                {{p.title}}
+                Editar Perfil
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
