--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -7,9 +7,10 @@
 </ion-header>
 
 <ion-content padding>
-  <p>{{ userOp }}</p>
   <div class="foto" > 
- <ion-menu-button id="fotoButton"></ion-menu-button>
+      <ion-menu-button id="fotoButton">
+        
+      </ion-menu-button>
   </div>
   <ion-button expand="block"  id="lut" (click)="novaLuta()">
     <img src="https://img.icons8.com/metro/26/000000/royal-marines.png">
@@ -19,12 +20,7 @@
     <img src="https://img.icons8.com/metro/26/000000/rules.png">
     Minhas Lutas
   </ion-button> 
-  <ion-button expand="block" (click)="relatorio()"  >
-      <img src="https://img.icons8.com/metro/26/000000/rules.png">
-      Relatorios
-    </ion-button> 
   
-  <p>{{userProfile?.nome}}</p>
   
 </ion-content>
 
