Imagem do ion_menu_button alterada

--- a/src/app/pages/user/user.page.scss
+++ b/src/app/pages/user/user.page.scss
@@ -3,10 +3,11 @@
     margin: 0;
     height: 100%; 
     border-radius: 80%;
+    background-size: contain;
 }
 .foto{
     display: flex;
-    height: 40%;
+    height: 40%; 
      
 }
 #lut{
