ajuste do tamanho do icone e da imagem da luta

--- a/src/app/pages/luta/luta.page.html
+++ b/src/app/pages/luta/luta.page.html
@@ -11,8 +11,8 @@
 </ion-header>
 
 <ion-content class="body" padding>
-  <div id="lutadores">
-    <ion-grid>
+  <div >
+    <ion-grid id="lutadores">
       <ion-row>
         <ion-col>
           <div id="lutador1">
