--- a/src/app/pages/luta/luta.page.scss
+++ b/src/app/pages/luta/luta.page.scss
@@ -1,6 +1,5 @@
 #lutadores{
-    background: url('https://ucarecdn.com/8df209a9-16aa-435b-9ad5-e290e4efa333/dualstickman.png/-/preview/300x500/'); 
-
+    height: 290px;
 }
 .Ataques>ion-grid>ion-row>ion-col{
  width: 25%;
