implementação do toque duplo

--- a/src/app/pages/luta/luta.page.html
+++ b/src/app/pages/luta/luta.page.html
@@ -5,7 +5,7 @@
     </ion-button>
     
     <ion-button shape="round"  (click)="Concluir()">
-      Concluir
+      Concluir 
     </ion-button>
   </ion-toolbar>
 </ion-header>
@@ -89,7 +89,7 @@
         </ion-col>
       </ion-row>
       <ion-row class="toqueduplo">
-          <ion-button>Toque Duplo</ion-button>
+          <ion-button id="ataque5" (click)="marcaAtaque(5)">Toque Duplo</ion-button>
       </ion-row>
     </ion-grid>
   </div>
