--- a/src/app/pages/relatorio/relatorio.page.scss
+++ b/src/app/pages/relatorio/relatorio.page.scss
@@ -1,3 +1,19 @@
 p {
  white-space: pre-line;
 }
+#tabela{
+    border: 3px;
+    border-color: black;
+}
+#tituloLuta{
+    justify-content: center;
+}
+#butDetalhada{
+    
+    padding-right: 0px;
+}
+#butTabela{
+
+    padding-left: 0px;
+
+}
