Novo modelo de registro de lutadores

--- a/src/app/pages/luta/luta.page.scss
+++ b/src/app/pages/luta/luta.page.scss
@@ -1,5 +1,6 @@
 #lutadores{
     height: 290px;
+    // --background: url(..\assets\img\concatesgrim.png) ;
 }
 .Ataques>ion-grid>ion-row>ion-col{
  width: 25%;
