ajustes da tela relatorio

--- a/src/app/pages/registra-lutadores/registra-lutadores.page.html
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.html
@@ -11,7 +11,7 @@
           <ion-list-header> Lutador 1</ion-list-header>
           <ion-item>
               <ion-avatar slot="start">
-                <img src="./avatar.svg">
+                <ion-icon name="body"></ion-icon>
               </ion-avatar>
               <ion-label>
                   <ion-label >Nome: {{nome1}}</ion-label>
@@ -28,7 +28,7 @@
           <ion-list-header> Lutador 2</ion-list-header>
           <ion-item>
               <ion-avatar slot="start">
-                <img src="./avatar.svg">
+                <ion-icon name="contact"></ion-icon>
               </ion-avatar>
               <ion-label>
                   <ion-label >Nome: {{nome2}}</ion-label>
