--- a/src/app/pages/user/user.page.scss
+++ b/src/app/pages/user/user.page.scss
@@ -15,7 +15,7 @@ width:   100% !important;
 height : 100% !important;  
 max-width: 200px !important;  //any size
 max-height: 200px !important; //any size 
-margin-left: 40%;
+margin: auto;
 }
 
 .foto{
