--- a/src/app/pages/luta/luta.page.html
+++ b/src/app/pages/luta/luta.page.html
@@ -11,15 +11,16 @@
 </ion-header>
 
 <ion-content class="body" padding>
-  <div >
-    <ion-grid id="lutadores"  >
+  <ion-content class="imgLuta">
+    <!-- <img id="lutadores" src="" alt=""> -->
+    <ion-grid id="lutadores">
       <ion-row>
         <ion-col>
           <div id="lutador1">
-            <ion-row>
+            <ion-row class="cabecarow">
               <ion-button class="cabeca" id="localCorpo1" (click)="marcalocalCorpo(1)"></ion-button>
             </ion-row>
-            <ion-row>
+            <ion-row class="troncorow">
               <ion-col>
                 <ion-button class="braco esquerdo" id="localCorpo2" (click)="marcalocalCorpo(2)"></ion-button>
               </ion-col>
@@ -30,7 +31,7 @@
                 <ion-button class="braco direito" id="localCorpo4" (click)="marcalocalCorpo(4)"></ion-button>
               </ion-col>
             </ion-row>
-            <ion-row>
+            <ion-row class="pernasrow">
               <ion-col>
                 <ion-button class="perna esquerda" id="localCorpo5" (click)="marcalocalCorpo(5)"></ion-button>
               </ion-col>
@@ -44,10 +45,10 @@
         <ion-col>
           <div id="lutador2">
             
-            <ion-row>
+            <ion-row class="cabecarow">
               <ion-button class="cabeca" id="localCorpo7" (click)="marcalocalCorpo(7)"></ion-button>
             </ion-row>
-            <ion-row>
+            <ion-row class="troncorow">
               <ion-col>
                 <ion-button class="braco esquerdo" id="localCorpo8" (click)="marcalocalCorpo(8)"></ion-button>
               </ion-col>
@@ -58,7 +59,7 @@
                 <ion-button class="braco direito" id="localCorpo10" (click)="marcalocalCorpo(10)"></ion-button>
               </ion-col>
             </ion-row>
-            <ion-row>
+            <ion-row class="pernasrow">
               <ion-col>
                 <ion-button class="perna esquerda" id="localCorpo11" (click)="marcalocalCorpo(11)"></ion-button>
               </ion-col>
@@ -71,7 +72,7 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-  </div>
+  </ion-content>
   <div class="Ataques">
     <ion-grid>
       <ion-row>
@@ -79,17 +80,17 @@
           <ion-button class="movimento" id="ataque1" (click)="marcaAtaque(1)">Ataque</ion-button>
         </ion-col>
         <ion-col>
-            <ion-button class="movimento" id="ataque2" (click)="marcaAtaque(2)">Resposta</ion-button>
+          <ion-button class="movimento" id="ataque2" (click)="marcaAtaque(2)">Resposta</ion-button>
         </ion-col>
         <ion-col>
-            <ion-button class="movimento" id="ataque3" (click)="marcaAtaque(3)">Contra <br>Resposta</ion-button>
+          <ion-button class="movimento" id="ataque3" (click)="marcaAtaque(3)">Contra <br>Resposta</ion-button>
         </ion-col>
         <ion-col>
-            <ion-button class="movimento" id="ataque4" (click)="marcaAtaque(4)">Contra<br> Ataque</ion-button>
+          <ion-button class="movimento" id="ataque4" (click)="marcaAtaque(4)">Contra<br> Ataque</ion-button>
         </ion-col>
       </ion-row>
       <ion-row class="toqueduplo">
-          <ion-button id="ataque5" (click)="marcaAtaque(5)">Toque Duplo</ion-button>
+        <ion-button id="ataque5" (click)="marcaAtaque(5)">Toque Duplo</ion-button>
       </ion-row>
     </ion-grid>
   </div>
@@ -123,7 +124,7 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-
+    
   </div>
   
 </ion-content>
