--- a/src/app/pages/relatorio/relatorio.page.html
+++ b/src/app/pages/relatorio/relatorio.page.html
@@ -3,7 +3,8 @@
     <ion-button shape="round" (click)="voltar()">
       <ion-icon name="arrow-dropleft-circle"></ion-icon>
     </ion-button>
-    {{lutadoresNomes.nome1}}  {{lutadoresNomes.nome2}}
+    <ion-label>{{lutadoresAtuais.nome1}} {{totalPontos1}} X {{totalPontos2}} {{lutadoresAtuais.nome2}}</ion-label>
+    
   </ion-toolbar>
 </ion-header>
 
@@ -21,13 +22,13 @@
   <div id="descricao" > 
     <p>{{lutaDetalhes}} </p>
   </div>
-  <div>
-    <ion-button (click)="trocaLutador()">  <ion-icon name="arrow-dropleft-circle"></ion-icon> </ion-button>
-    <ion-label>{{nomeLutador}}</ion-label>
-    <ion-button (click)="trocaLutador()"> <ion-icon name="arrow-dropright-circle"></ion-icon> </ion-button>
-  </div>
   
   <div id="tabela">
+    <div>
+      <ion-button (click)="trocaLutador()">  <ion-icon name="arrow-dropleft-circle"></ion-icon> </ion-button>
+      <ion-label>{{nomeLutador}}</ion-label>
+      <ion-button (click)="trocaLutador()"> <ion-icon name="arrow-dropright-circle"></ion-icon> </ion-button>
+    </div>  
     <ion-list>
       <ion-list-header>
         <ion-segment>
@@ -39,22 +40,30 @@
           </ion-segment-button>
         </ion-segment>
       </ion-list-header>
-      <ion-item *ngFor="let pontos of pontosLutador1" id="Lut1Pt1">
-        <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
-        <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
-      </ion-item>
-      <ion-item *ngFor="let pontos of pontosLutador1" id="Lut1Pt2">
-        <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
-        <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
-      </ion-item>
-      <ion-item *ngFor="let pontos of pontosLutador1" id="Lut2Pt1">
-        <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
-        <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
-      </ion-item>
-      <ion-item *ngFor="let pontos of pontosLutador1" id="Lut2Pt2">
-        <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
-        <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
-      </ion-item>
+      <div id="Lut1Pt1">
+        <ion-item *ngFor="let pontos of pontosLutador1" >
+          <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
+          <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
+        </ion-item>
+      </div>
+      <div id="Lut1Pt2">
+        <ion-item *ngFor="let pontos of pontosLutador2" >
+          <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
+          <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
+        </ion-item>
+      </div>
+      <div id="Lut2Pt1">
+        <ion-item *ngFor="let pontos of pontosLutador2" >
+          <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
+          <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
+        </ion-item>
+      </div>
+      <div id="Lut2Pt2">
+        <ion-item *ngFor="let pontos of pontosLutador1" >
+          <ion-label>{{pontos.nomeLocalCorpo}}</ion-label>
+          <ion-note slot="end">{{pontos.quantidadeAcertos}}</ion-note>
+        </ion-item>
+      </div>
     </ion-list>
   </div>
   
